Bug 463421 - KCharsets::codecForName() deprecation breaks Kf6/Qt6 build of kconfigwidgets, which uses it unconditionally
Summary: KCharsets::codecForName() deprecation breaks Kf6/Qt6 build of kconfigwidgets,...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcodecs
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.101.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-24 09:32 UTC by FeRD (Frank Dana)
Modified: 2023-01-22 15:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FeRD (Frank Dana) 2022-12-24 09:32:26 UTC
SUMMARY
I'm really not sure whether I should be reporting this against kcodecs or kconfigwidgets, but...

The recent change in kcodecs to mark KCharsets::codecForName() deprecated since 5.101 breaks the kf6-frameworks-build-include build of kconfigwidgets in kdesrc-build (which is configured,in part:)

module-set frameworks
    cmake-options -DBUILD_TESTING=TRUE -DBUILD_WITH_QT6=ON -DEXCLUDE_DEPRECATED_BEFORE_AND_AT=5.101.0
end module-set

kcodecwidgets unconditionally uses codecForName() at several points within kcodecaction.cpp, so removing the method causes build failures.

STEPS TO REPRODUCE
1. install kdesrc-build and configure to build kf6-frameworks for Qt6
2. kdesrc-build kconfigwidgets

OBSERVED RESULT

Building kconfigwidgets from frameworks (13/17)
	Fetching remote changes to kconfigwidgets
	Merging kconfigwidgets changes from branch master
	Source update complete for kconfigwidgets: no files affected
	  Rebuilding because the build directory doesn't exist
	Preparing build system for kconfigwidgets.
	Running cmake targeting Unix Makefiles...
	Compiling... failed (after 7 seconds)

See above for details.

EXPECTED RESULT

Successful compilation with no errors.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: Building Kf6 from current sources with kdesrc-build
Qt Version: 6.4.1

ADDITIONAL INFORMATION

<sourcedir>/log/<date>/kconfigwidgets/error.log with the default options:

[ 22%] Building CXX object src/CMakeFiles/KF5ConfigWidgets.dir/kcolorscheme.cpp.o
.../kconfigwidgets/src/kcodecaction.cpp: In member function ‘int KCodecAction::mibForName(const QString&, bool*) const’:
.../kconfigwidgets/src/kcodecaction.cpp:108:39: error: ‘class KCharsets’ has no member named ‘codecForName’; did you mean ‘encodingForName’?
  108 |         QTextCodec *codec = charsets->codecForName(codecName, success);
      |                                       ^~~~~~~~~~~~
      |                                       encodingForName
.../kconfigwidgets/src/kcodecaction.cpp:111:31: error: ‘class KCharsets’ has no member named ‘codecForName’; did you mean ‘encodingForName’?
  111 |             codec = charsets->codecForName(charsets->encodingForName(codecName), success);
      |                               ^~~~~~~~~~~~
      |                               encodingForName
.../kconfigwidgets/src/kcodecaction.cpp: In member function ‘bool KCodecAction::setCurrentCodec(QTextCodec*)’:
.../kconfigwidgets/src/kcodecaction.cpp:214:53: error: ‘class KCharsets’ has no member named ‘codecForName’; did you mean ‘encodingForName’?
  214 |                 if (codec == KCharsets::charsets()->codecForName(actions().at(i)->menu()->actions().at(j)->text())) {
      |                                                     ^~~~~~~~~~~~
      |                                                     encodingForName
.../kconfigwidgets/src/kcodecaction.cpp: In member function ‘bool KCodecAction::setCurrentCodec(const QString&)’:
.../kconfigwidgets/src/kcodecaction.cpp:232:51: error: ‘class KCharsets’ has no member named ‘codecForName’; did you mean ‘encodingForName’?
  232 |     return setCurrentCodec(KCharsets::charsets()->codecForName(codecName));
      |                                                   ^~~~~~~~~~~~
      |                                                   encodingForName
gmake[2]: *** [src/CMakeFiles/KF5ConfigWidgets.dir/build.make:97: src/CMakeFiles/KF5ConfigWidgets.dir/kcodecaction.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:741: src/CMakeFiles/KF5ConfigWidgets.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2


Downgrading to -DEXCLUDE_DEPRECATED_BEFORE_AND_AT=5.100.0 allows kconfigwidgets to compile successfully, e.g. at the end of $HOME/.config/kdesrc-buildrc:

# Downgrade deprecation exclusions
options frameworks
    cmake-options -DEXCLUDE_DEPRECATED_BEFORE_AND_AT=5.100.0
end options
Comment 1 FeRD (Frank Dana) 2022-12-24 09:36:29 UTC
(The kcodecs change in question was this one, merged as commit 19e7a37c845ccaf96bcd1b2b6ff571c936e05484)

https://invent.kde.org/frameworks/kcodecs/-/merge_requests/27
Comment 2 FeRD (Frank Dana) 2022-12-24 09:39:59 UTC
(In reply to FeRD (Frank Dana) from comment #0)
> kcodecwidgets unconditionally uses codecForName() at several points within
> kcodecaction.cpp, so removing the method causes build failures.

It was virtually guaranteed I was going to do that at least once.

s/kcodecwidgets/kconfigwidgets/
Comment 3 demm 2023-01-10 15:40:10 UTC
This MR:
https://invent.kde.org/frameworks/kconfigwidgets/-/merge_requests/173
fixes the Qt6 based kconfigwidgets build for me, using tagged 5.102.0, just needed to set:
-DEXCLUDE_DEPRECATED_BEFORE_AND_AT=5.103.0
to make the patches work.
Comment 4 Nicolas Fella 2023-01-22 15:45:07 UTC
Git commit 73b9e4d8164de30b938513c0c279485b13bf2158 by Nicolas Fella.
Committed on 22/01/2023 at 15:44.
Pushed by nicolasfella into branch 'kf5'.

[kcodecaction] Deprecate QTextCodec and mib-based API

Use the name-based API instead

M  +31   -1    src/kcodecaction.cpp
M  +41   -0    src/kcodecaction.h

https://invent.kde.org/frameworks/kconfigwidgets/commit/73b9e4d8164de30b938513c0c279485b13bf2158
Comment 5 Nicolas Fella 2023-01-22 15:54:27 UTC
Git commit 6ff2090d923a0c7e7371b09eb66baad5168ad2fe by Nicolas Fella.
Committed on 22/01/2023 at 15:53.
Pushed by nicolasfella into branch 'master'.

[kcodecaction] Deprecate QTextCodec and mib-based API

Use the name-based API instead

M  +31   -1    src/kcodecaction.cpp
M  +41   -0    src/kcodecaction.h

https://invent.kde.org/frameworks/kconfigwidgets/commit/6ff2090d923a0c7e7371b09eb66baad5168ad2fe