[kcodecaction] Deprecate QTextCodec and mib-based API

Use the name-based API instead

BUG: 463421